// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspector CMS/sequences 1`] = `
"type Provider @pgTable(name: \\"providers\\") {
  id: Int! @pgColumn(name: \\"npi\\") @unique
  address_city: String
  address_country: String
  address_latitude: Float
  address_longitude: Float
  address_state: String
  address_street_01: String
  address_street_02: String
  address_zip_code: String
  entity_type: String
  provider_performance: [ProviderPerformance]
  provider_type: String
  providers_individuals: [ProvidersIndividual]
  providers_organizations: [ProvidersOrganization]
  service_provider_performance: [ServiceProviderPerformance]
  service_provider_performance_summary: [ServiceProviderPerformanceSummary]
}

type ProviderPerformance @pgTable(name: \\"provider_performance\\") {
  id: Int! @pgColumn(name: \\"prisma_id\\") @unique
  avg_mcare_allowed_amt: Float
  avg_mcare_pay_amt: Float
  avg_mcare_standardized_amt: Float
  avg_submitted_charge_amt: Float
  hcpcs_code: Service!
  mcare_participation_indicator: String
  n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  n_of_mcare_beneficiaries: Int
  n_of_svcs: Float
  npi: Provider!
  place_of_service: String!
}

type ProvidersIndividual @pgTable(name: \\"providers_individuals\\") {
  id: Provider! @pgColumn(name: \\"npi\\") @unique
  credentials: String
  gender: String
  name_first: String
  name_last: String
  name_middle: String
}

type ProvidersOrganization @pgTable(name: \\"providers_organizations\\") {
  id: Provider! @pgColumn(name: \\"npi\\") @unique
  name: String
}

type Service @pgTable(name: \\"services\\") {
  id: ID! @pgColumn(name: \\"hcpcs_code\\") @unique
  hcpcs_description: String
  hcpcs_drug_indicator: String
  provider_performance: [ProviderPerformance]
  service_performance: [ServicePerformance]
  service_provider_performance: [ServiceProviderPerformance]
}

type ServicePerformance @pgTable(name: \\"service_performance\\") {
  id: Int! @pgColumn(name: \\"prisma_id\\") @unique
  avg_avg_mcare_allowed_amt: Float
  avg_avg_mcare_pay_amt: Float
  avg_avg_mcare_standardized_amt: Float
  avg_avg_submitted_charge_amt: Float
  entity_type: String!
  est_ttl_mcare_allowed_amt: Float
  est_ttl_mcare_pay_amt: Float
  est_ttl_mcare_standardized_amt: Float
  est_ttl_submitted_charge_amt: Float
  hcpcs_code: Service!
  max_avg_mcare_allowed_amt: Float
  max_avg_mcare_pay_amt: Float
  max_avg_mcare_standardized_amt: Float
  max_avg_submitted_charge_amt: Float
  min_avg_mcare_allowed_amt: Float
  min_avg_mcare_pay_amt: Float
  min_avg_mcare_standardized_amt: Float
  min_avg_submitted_charge_amt: Float
  n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  n_of_mcare_beneficiaries: Int
  n_of_svcs: Float
  providers: Int
  rank_avg_avg_mcare_allowed_amt: Int
  rank_avg_avg_mcare_pay_amt: Int
  rank_avg_avg_mcare_standardized_amt: Int
  rank_avg_avg_submitted_charge_amt: Int
  rank_est_ttl_mcare_allowed_amt: Int
  rank_est_ttl_mcare_pay_amt: Int
  rank_est_ttl_mcare_standardized_amt: Int
  rank_est_ttl_submitted_charge_amt: Int
  rank_max_avg_mcare_allowed_amt: Int
  rank_max_avg_mcare_pay_amt: Int
  rank_max_avg_mcare_standardized_amt: Int
  rank_max_avg_submitted_charge_amt: Int
  rank_min_avg_mcare_allowed_amt: Int
  rank_min_avg_mcare_pay_amt: Int
  rank_min_avg_mcare_standardized_amt: Int
  rank_min_avg_submitted_charge_amt: Int
  rank_n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  rank_n_of_mcare_beneficiaries: Int
  rank_n_of_svcs: Int
  rank_providers: Int
  rank_var_avg_mcare_allowed_amt: Int
  rank_var_avg_mcare_pay_amt: Int
  rank_var_avg_mcare_standardized_amt: Int
  rank_var_avg_mcare_submitted_charge_pay_amt: Int
  rank_var_avg_submitted_charge_amt: Int
  var_avg_mcare_allowed_amt: Float
  var_avg_mcare_pay_amt: Float
  var_avg_mcare_standardized_amt: Float
  var_avg_mcare_submitted_charge_pay_amt: Float
  var_avg_submitted_charge_amt: Float
}

type ServiceProviderPerformance @pgTable(name: \\"service_provider_performance\\") {
  id: Int! @pgColumn(name: \\"prisma_id\\") @unique
  avg_mcare_allowed_amt: Float
  avg_mcare_pay_amt: Float
  avg_mcare_standardized_amt: Float
  avg_submitted_charge_amt: Float
  entity_type: String
  est_ttl_mcare_pay_amt: Float
  est_ttl_submitted_charge_amt: Float
  hcpcs_code: Service!
  mcare_participation_indicator: String
  n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  n_of_mcare_beneficiaries: Int
  n_of_svcs: Float
  npi: Provider!
  place_of_service: String!
  rank_avg_mcare_allowed_amt: Int
  rank_avg_mcare_pay_amt: Int
  rank_avg_mcare_standardized_amt: Int
  rank_avg_submitted_charge_amt: Int
  rank_est_ttl_mcare_pay_amt: Int
  rank_est_ttl_submitted_charge_amt: Int
  rank_n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  rank_n_of_mcare_beneficiaries: Int
  rank_n_of_svcs: Int
  rank_var_avg_mcare_submitted_charge_pay_amt: Int
  var_avg_mcare_submitted_charge_pay_amt: Float
}

type ServiceProviderPerformanceSummary @pgTable(name: \\"service_provider_performance_summary\\") {
  id: Int! @pgColumn(name: \\"prisma_id\\") @unique
  entity_type: String
  est_ttl_mcare_pay_amt: Float
  est_ttl_mcare_pay_amt_by_ttl_hcpcs_code: Float
  est_ttl_mcare_pay_amt_by_ttl_n_of_svcs: Float
  est_ttl_submitted_charge_amt: Float
  npi: Provider!
  rank_est_ttl_mcare_pay_amt: Int
  rank_est_ttl_mcare_pay_amt_by_ttl_hcpcs_code: Int
  rank_est_ttl_mcare_pay_amt_by_ttl_n_of_servi: Int
  rank_est_ttl_submitted_charge_amt: Int
  rank_ttl_hcpcs_code: Int
  rank_ttl_n_of_svcs: Int
  rank_var_est_ttl_mcare_submitted_charge_pay_amoun: Int
  summary_type: ServiceProviderPerformanceSummaryType!
  ttl_hcpcs_code: String
  ttl_n_of_svcs: Int
  var_est_ttl_mcare_submitted_charge_pay_amt: Float
}

type ServiceProviderPerformanceSummaryType @pgTable(name: \\"service_provider_performance_summary_type\\") {
  id: Int! @unique
  description: String!
  group_membership: Boolean! @default(value: true)
  service_provider_performance_summary: [ServiceProviderPerformanceSummary]
  slug: String @unique
}"
`;

exports[`Introspector CMS/sequences 2`] = `
"type Provider @db(name: \\"providers\\") {
  npi: Int! @id(strategy: NONE)
  address_city: String
  address_country: String
  address_latitude: Float
  address_longitude: Float
  address_state: String
  address_street_01: String
  address_street_02: String
  address_zip_code: String
  entity_type: String
  provider_performance: [ProviderPerformance]
  provider_type: String
  providers_individuals: [ProvidersIndividual]
  providers_organizations: [ProvidersOrganization]
  service_provider_performance: [ServiceProviderPerformance]
  service_provider_performance_summary: [ServiceProviderPerformanceSummary]
}

type ProviderPerformance @db(name: \\"provider_performance\\") {
  prisma_id: Int! @id(strategy: SEQUENCE) @sequence(name: \\"provider_performance_prisma_id_seq1\\", initialValue: 1, allocationSize: 1)
  avg_mcare_allowed_amt: Float
  avg_mcare_pay_amt: Float
  avg_mcare_standardized_amt: Float
  avg_submitted_charge_amt: Float
  hcpcs_code: Service!
  mcare_participation_indicator: String
  n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  n_of_mcare_beneficiaries: Int
  n_of_svcs: Float
  npi: Provider!
  place_of_service: String!
}

type ProvidersIndividual @db(name: \\"providers_individuals\\") {
  npi: Provider! @id(strategy: NONE)
  credentials: String
  gender: String
  name_first: String
  name_last: String
  name_middle: String
}

type ProvidersOrganization @db(name: \\"providers_organizations\\") {
  npi: Provider! @id(strategy: NONE)
  name: String
}

type Service @db(name: \\"services\\") {
  hcpcs_code: ID! @id(strategy: NONE)
  hcpcs_description: String
  hcpcs_drug_indicator: String
  provider_performance: [ProviderPerformance]
  service_performance: [ServicePerformance]
  service_provider_performance: [ServiceProviderPerformance]
}

type ServicePerformance @db(name: \\"service_performance\\") {
  prisma_id: Int! @id(strategy: SEQUENCE) @sequence(name: \\"service_performance_prisma_id_seq1\\", initialValue: 1, allocationSize: 1)
  avg_avg_mcare_allowed_amt: Float
  avg_avg_mcare_pay_amt: Float
  avg_avg_mcare_standardized_amt: Float
  avg_avg_submitted_charge_amt: Float
  entity_type: String!
  est_ttl_mcare_allowed_amt: Float
  est_ttl_mcare_pay_amt: Float
  est_ttl_mcare_standardized_amt: Float
  est_ttl_submitted_charge_amt: Float
  hcpcs_code: Service!
  max_avg_mcare_allowed_amt: Float
  max_avg_mcare_pay_amt: Float
  max_avg_mcare_standardized_amt: Float
  max_avg_submitted_charge_amt: Float
  min_avg_mcare_allowed_amt: Float
  min_avg_mcare_pay_amt: Float
  min_avg_mcare_standardized_amt: Float
  min_avg_submitted_charge_amt: Float
  n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  n_of_mcare_beneficiaries: Int
  n_of_svcs: Float
  providers: Int
  rank_avg_avg_mcare_allowed_amt: Int
  rank_avg_avg_mcare_pay_amt: Int
  rank_avg_avg_mcare_standardized_amt: Int
  rank_avg_avg_submitted_charge_amt: Int
  rank_est_ttl_mcare_allowed_amt: Int
  rank_est_ttl_mcare_pay_amt: Int
  rank_est_ttl_mcare_standardized_amt: Int
  rank_est_ttl_submitted_charge_amt: Int
  rank_max_avg_mcare_allowed_amt: Int
  rank_max_avg_mcare_pay_amt: Int
  rank_max_avg_mcare_standardized_amt: Int
  rank_max_avg_submitted_charge_amt: Int
  rank_min_avg_mcare_allowed_amt: Int
  rank_min_avg_mcare_pay_amt: Int
  rank_min_avg_mcare_standardized_amt: Int
  rank_min_avg_submitted_charge_amt: Int
  rank_n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  rank_n_of_mcare_beneficiaries: Int
  rank_n_of_svcs: Int
  rank_providers: Int
  rank_var_avg_mcare_allowed_amt: Int
  rank_var_avg_mcare_pay_amt: Int
  rank_var_avg_mcare_standardized_amt: Int
  rank_var_avg_mcare_submitted_charge_pay_amt: Int
  rank_var_avg_submitted_charge_amt: Int
  var_avg_mcare_allowed_amt: Float
  var_avg_mcare_pay_amt: Float
  var_avg_mcare_standardized_amt: Float
  var_avg_mcare_submitted_charge_pay_amt: Float
  var_avg_submitted_charge_amt: Float
}

type ServiceProviderPerformance @db(name: \\"service_provider_performance\\") {
  prisma_id: Int! @id(strategy: SEQUENCE) @sequence(name: \\"service_provider_performance_prisma_id_seq1\\", initialValue: 1, allocationSize: 1)
  avg_mcare_allowed_amt: Float
  avg_mcare_pay_amt: Float
  avg_mcare_standardized_amt: Float
  avg_submitted_charge_amt: Float
  entity_type: String
  est_ttl_mcare_pay_amt: Float
  est_ttl_submitted_charge_amt: Float
  hcpcs_code: Service!
  mcare_participation_indicator: String
  n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  n_of_mcare_beneficiaries: Int
  n_of_svcs: Float
  npi: Provider!
  place_of_service: String!
  rank_avg_mcare_allowed_amt: Int
  rank_avg_mcare_pay_amt: Int
  rank_avg_mcare_standardized_amt: Int
  rank_avg_submitted_charge_amt: Int
  rank_est_ttl_mcare_pay_amt: Int
  rank_est_ttl_submitted_charge_amt: Int
  rank_n_of_distinct_mcare_beneficiary_per_day_svcs: Int
  rank_n_of_mcare_beneficiaries: Int
  rank_n_of_svcs: Int
  rank_var_avg_mcare_submitted_charge_pay_amt: Int
  var_avg_mcare_submitted_charge_pay_amt: Float
}

type ServiceProviderPerformanceSummary @db(name: \\"service_provider_performance_summary\\") {
  prisma_id: Int! @id(strategy: SEQUENCE) @sequence(name: \\"service_provider_performance_summary_prisma_id_seq1\\", initialValue: 1, allocationSize: 1)
  entity_type: String
  est_ttl_mcare_pay_amt: Float
  est_ttl_mcare_pay_amt_by_ttl_hcpcs_code: Float
  est_ttl_mcare_pay_amt_by_ttl_n_of_svcs: Float
  est_ttl_submitted_charge_amt: Float
  npi: Provider!
  rank_est_ttl_mcare_pay_amt: Int
  rank_est_ttl_mcare_pay_amt_by_ttl_hcpcs_code: Int
  rank_est_ttl_mcare_pay_amt_by_ttl_n_of_servi: Int
  rank_est_ttl_submitted_charge_amt: Int
  rank_ttl_hcpcs_code: Int
  rank_ttl_n_of_svcs: Int
  rank_var_est_ttl_mcare_submitted_charge_pay_amoun: Int
  summary_type: ServiceProviderPerformanceSummaryType!
  ttl_hcpcs_code: String
  ttl_n_of_svcs: Int
  var_est_ttl_mcare_submitted_charge_pay_amt: Float
}

type ServiceProviderPerformanceSummaryType @db(name: \\"service_provider_performance_summary_type\\") {
  id: Int! @id(strategy: SEQUENCE) @sequence(name: \\"service_provider_performance_summary_type_id_seq1\\", initialValue: 1, allocationSize: 1)
  description: String!
  group_membership: Boolean! @default(value: true)
  service_provider_performance_summary: [ServiceProviderPerformanceSummary]
  slug: String @unique
}"
`;
